<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SecuriPi</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Paramètres</string>
    <string name="username">Nom d\'utilisateur :</string>
    <string name="password">Mot de passe :</string>
    <string name="Login">Connexion</string>
    <string name="attempts">Essais restants :</string>
    <string name="title_activity_visualisation">Visualisation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="bouton1">Caméra 1</string>
    <string name="bouton2">Caméra 2</string>
    <string name="bouton3">Caméra 3</string>


</resources>
