<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <Button
        android:id="@+id/button1"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="75dp"
        android:background="@drawable/buttonshape"
        android:text="@string/bouton1"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/buttonshape"
        android:text="@string/bouton2"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignStart="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/buttonshape"
        android:text="@string/bouton3"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp" />
</RelativeLayout>

